compile assests at book in production unicorn listens on a port instead of a socket in production ignore .sass-cache

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@
 /coverage
 /coverage.data
 
-# Ignore compiled assets
+# Ignore assets
 /public/assets
+/.sass-cache
 
 # Ignore sensitive files
 /config/aws.yml
