bunch of minor cleanups

--- a/config/passmaster.conf
+++ b/config/passmaster.conf
@@ -10,6 +10,7 @@ pre-start script
   su - ryan -c 'cd /home/ryan/passmaster && git checkout -q master && git pull -q && git checkout -q production && git reset -q --hard origin/production'
   su - ryan -c 'cd /home/ryan/passmaster && script/wrapper bundle install --quiet --deployment --without=development test'
   su - ryan -c 'cd /home/ryan/passmaster && script/wrapper bundle exec rake RAILS_ENV=production db:migrate'
+  su - ryan -c 'cd /home/ryan/passmaster && script/wrapper bundle exec rake assets:precompile'
 end script
 
 exec su - ryan -c 'cd /home/ryan/passmaster && script/wrapper script/unicorn start production'
