updated upstart configs

--- a/config/passmaster.conf
+++ b/config/passmaster.conf
@@ -2,7 +2,7 @@
 
 description "Deploy Passmaster"
 
-start on (net-device-up
+start on (net-device-up IFACE=eth0
           and local-filesystems
           and runlevel [2345])
 
