--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /.bundle
 /vendor/bundle
 
+# Ignore the default SQLite database.
+/db/*.sqlite3
+
 # Ignore all logfiles and tempfiles.
 /log
 /tmp
@@ -19,7 +22,3 @@
 # Ignore assets
 /public/assets
 /.sass-cache
-
-# Ignore sensitive configs
-/config/aws.yml
-
