update upstart scripts for aws

--- a/config/passmaster-shutdown.conf
+++ b/config/passmaster-shutdown.conf
@@ -4,4 +4,4 @@ description "Shutdown Passmaster"
 
 start on (runlevel [016])
 
-exec su - ryan -c 'cd /home/ryan/passmaster && script/wrapper script/unicorn stop'
+exec su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper script/unicorn stop'
