--- a/config/passmaster.conf
+++ b/config/passmaster.conf
@@ -7,10 +7,10 @@ start on (net-device-up IFACE=eth0
           and runlevel [2345])
 
 pre-start script
-  su - ryan -c 'cd /home/ryan/passmaster && git checkout -q master && git pull -q && git checkout -q production && git reset -q --hard origin/production'
-  su - ryan -c 'cd /home/ryan/passmaster && script/wrapper bundle install --quiet --deployment --without=development test ops'
-  su - ryan -c 'cd /home/ryan/passmaster && script/wrapper bundle exec rake RAILS_ENV=production db:migrate'
-  su - ryan -c 'cd /home/ryan/passmaster && script/wrapper bundle exec rake assets:precompile'
+  su - ubuntu -c 'cd /home/ubuntu/passmaster && git checkout -q master && git pull -q && git checkout -q production && git reset -q --hard origin/production'
+  su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper bundle install --quiet --deployment --without=development test ops'
+  su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper bundle exec rake RAILS_ENV=production db:migrate'
+  su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper bundle exec rake assets:precompile'
 end script
 
-exec su - ryan -c 'cd /home/ryan/passmaster && script/wrapper script/unicorn start production'
+exec su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper script/unicorn start production'
