--- a/config/server/passmaster.conf
+++ b/config/server/passmaster.conf
@@ -8,9 +8,7 @@ start on (net-device-up IFACE=eth0
 
 pre-start script
   su - ubuntu -c 'cd /home/ubuntu/passmaster && git checkout -q master && git pull -q && git checkout -q production && git reset -q --hard origin/production'
-  su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper bundle install --quiet --deployment --without=development test'
-  su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper bundle exec rake RAILS_ENV=production db:migrate'
-  su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper bundle exec rake assets:precompile'
+  su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper bundle install --quiet --deployment --without=development test assets'
 end script
 
 exec su - ubuntu -c 'cd /home/ubuntu/passmaster && script/wrapper script/unicorn start production'
