fix typo in start/stop upstart configs

--- a/config/server/passmaster-start.conf
+++ b/config/server/passmaster-start.conf
@@ -1,9 +1,11 @@
-# Passmaster Upstart Configuration - Start
+# passmaster-start - Upstart task for starting passmaster server
 
-description "Start Passmaster Server"
+description "Start passmaster server"
 
 start on (net-device-up IFACE=eth0
           and local-filesystems
           and runlevel [2345])
 
-exec /home/ubuntu/passmaster/script/wrapper /home/ubuntu/passmaster/script/server_start'
+task
+
+exec /home/ubuntu/passmaster/script/wrapper /home/ubuntu/passmaster/script/server_start
