--- a/config/server/passmaster-stop.conf
+++ b/config/server/passmaster-stop.conf
@@ -1,7 +1,9 @@
-# Passmaster Upstart Configuration - Stop
+# passmaster-stop - Upstart task for stopping passmaster server
 
-description "Stop Passmaster Server"
+description "Stop passmaster server"
 
 start on (runlevel [016])
 
-exec /home/ubuntu/passmaster/script/wrapper /home/ubuntu/passmaster/script/server_stop'
+task
+
+exec /home/ubuntu/passmaster/script/wrapper /home/ubuntu/passmaster/script/server_stop
