--- a/config/server/passmaster-start.conf
+++ b/config/server/passmaster-start.conf
@@ -8,4 +8,8 @@ start on (net-device-up IFACE=eth0
 
 task
 
+pre-start script
+  su - ubuntu -c 'cd /home/ubuntu/passmaster && git checkout --quiet master && git pull --quiet'
+end script
+
 exec /home/ubuntu/passmaster/script/wrapper /home/ubuntu/passmaster/script/server_start
