--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -12,7 +12,7 @@ http {
   tcp_nodelay on;
   keepalive_timeout 30;
   types_hash_max_size 2048;
-  client_max_body_size 16M;
+  client_max_body_size 10M;
 
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
@@ -32,8 +32,25 @@ http {
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header Host $http_host;
 
+  ssl_certificate /etc/ssl/certs/passmaster.io.crt;
+  ssl_certificate_key /etc/ssl/private/passmaster.io.key;
+  ssl_session_cache shared:SSL:5m;
+  ssl_session_timeout 10m;
+  ssl_prefer_server_ciphers on;
+  ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
+
   server {
     listen 80 default_server;
+
+    location / {
+      access_log /var/log/nginx/spam.log;
+      return 410;
+    }
+  }
+
+  server {
+    listen 443 default_server ssl;
 
     location / {
       access_log /var/log/nginx/spam.log;
