--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -30,6 +30,7 @@ http {
   proxy_redirect off;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header Host $http_host;
 
   ssl_certificate /etc/ssl/certs/passmaster.io.crt;
