update gems and database yml for VPC

--- a/config/database.yml
+++ b/config/database.yml
@@ -26,4 +26,4 @@ production:
   pool: 5
   username: passmaster
   password: 89BJIjVkgpv21vqy
-  host: passmaster-production.c9ntq4v9xdk8.us-west-2.rds.amazonaws.com
+  host: passmaster-vpc-production.c9ntq4v9xdk8.us-west-2.rds.amazonaws.com
