--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,16 @@ test:
   password:
   host: localhost
 
+staging:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: true
+  database: passmaster
+  pool: 5
+  username: root
+  password:
+  host: localhost
+
 production:
   adapter: mysql2
   encoding: utf8
