--- a/config/env.yml
+++ b/config/env.yml
@@ -1,3 +1,8 @@
+# This file contains all the environment variables required by the application.
+#
+# You should copy it to #{Rails.root}/config/env.local.yml and customize the
+# db_* and passmaster_host settings to suite your local environment.
+
 development:
   db_username: root
   db_password:
