--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,6 @@
+# The connection options are set via environment variables as defined
+# in #{Rails.root}config/env.yml. See that file for more details.
+
 defaults: &defaults
   adapter: mysql2
   encoding: utf8
