change management scripts and server configs for a new host

--- a/config/server/passmaster-start.conf
+++ b/config/server/passmaster-start.conf
@@ -2,14 +2,14 @@
 
 description "Start passmaster server"
 
-start on (net-device-up IFACE=eth0
+start on (net-device-up IFACE!=lo
           and local-filesystems
           and runlevel [2345])
 
 task
 
 pre-start script
-  su - ubuntu -c 'cd /home/ubuntu/passmaster && git checkout --quiet master && git pull --quiet'
+  su - passmaster -c 'cd /home/passmaster/passmaster && git checkout --quiet master && git pull --quiet'
 end script
 
-exec /home/ubuntu/passmaster/script/wrapper /home/ubuntu/passmaster/script/server_start
+exec /home/passmaster/passmaster/script/wrapper /home/passmaster/passmaster/script/server_start
