--- a/config/server/remote-syslog.conf
+++ b/config/server/remote-syslog.conf
@@ -2,7 +2,7 @@
 
 description "Monitor files and send to PaperTrail"
 
-start on (net-device-up IFACE=eth0
+start on (net-device-up IFACE!=lo
           and local-filesystems
           and runlevel [2345])
 stop on runlevel [!2345]
@@ -11,4 +11,4 @@ respawn
 
 pre-start exec /usr/bin/test -e /etc/remote_syslog.yml
 
-exec /home/ubuntu/.rvm/bin/bootup_remote_syslog -D --tls -c /etc/remote_syslog.yml
+exec /usr/local/rvm/bin/bootup_remote_syslog -D --tls -c /etc/remote_syslog.yml
