--- a/config/env.yml
+++ b/config/env.yml
@@ -4,29 +4,33 @@
 # db_* and passmaster_host settings to suite your local environment.
 
 development:
-  db_username: root
+  db_username: postgres
   db_password:
   db_database: passmaster
-  db_host: localhost
+  db_host: 127.0.0.1
+  db_port: 5432
 
 test:
-  db_username: root
+  db_username: postgres
   db_password:
   db_database: passmaster_test
-  db_host: localhost
+  db_host: 127.0.0.1
+  db_port: 5432
 
 staging:
-  db_username: root
+  db_username: postgres
   db_password:
   db_database: passmaster
-  db_host: localhost
+  db_host: 127.0.0.1
+  db_port: 5432
 
 production:
   db_username:
   db_password:
   db_database:
   db_host:
+  db_port:
   secret_key_base:
 
 newrelic_license_key:
-passmaster_host: localhost:8000
+passmaster_host: 127.0.0.1:8000
