turn on wal archiving

--- a/config/server/postgresql.conf
+++ b/config/server/postgresql.conf
@@ -42,7 +42,7 @@ synchronous_commit           = on
 wal_buffers                  = 16MB
 checkpoint_segments          = 10
 checkpoint_completion_target = 0.9
-archive_mode                 = off
+archive_mode                 = on
 archive_command              = '/usr/local/rvm/bin/wal_ruby /usr/share/postgresql-common/pg_archive %p %f'
 max_wal_senders              = 5
 
