--- a/config/server/postgresql.conf
+++ b/config/server/postgresql.conf
@@ -17,7 +17,7 @@ external_pid_file = '/var/run/postgresql/9.3-main.pid'
 
 listen_addresses        = '127.0.0.1'
 port                    = 5432
-max_connections         = 100
+max_connections         = 20
 unix_socket_directories = '/var/run/postgresql'
 ssl                     = true
 ssl_cert_file           = '/etc/ssl/certs/ssl-cert-snakeoil.pem'
@@ -40,10 +40,13 @@ wal_level                    = hot_standby
 fsync                        = on
 synchronous_commit           = on
 wal_buffers                  = 16MB
-checkpoint_segments          = 10
-checkpoint_completion_target = 0.9
+checkpoint_segments          = 4
+checkpoint_timeout           = 15min
+checkpoint_completion_target = 0.2
+checkpoint_warning           = 5min
 archive_mode                 = on
 archive_command              = '/usr/local/rvm/bin/aws_ruby /usr/share/postgresql-common/pg_archive %p %f'
+archive_timeout              = 1min
 max_wal_senders              = 5
 
 #------------------------------------------------------------------------------
