more postgresql tuning

--- a/config/server/postgresql.conf
+++ b/config/server/postgresql.conf
@@ -27,10 +27,10 @@ ssl_key_file            = '/etc/ssl/private/ssl-cert-snakeoil.key'
 # RESOURCE USAGE (except WAL)
 #------------------------------------------------------------------------------
 
-shared_buffers       = 1GB
+shared_buffers       = 256MB
 work_mem             = 32MB
 maintenance_work_mem = 256MB
-effective_cache_size = 2GB
+effective_cache_size = 1GB
 
 #------------------------------------------------------------------------------
 # WRITE AHEAD LOG
