log DDL statements

--- a/config/server/postgresql.conf
+++ b/config/server/postgresql.conf
@@ -56,6 +56,7 @@ max_wal_senders              = 5
 hot_standby                = on
 hot_standby_feedback       = on
 logging_collector          = on
+log_statement              = 'ddl'
 log_line_prefix            = '%t '
 log_timezone               = 'UTC'
 datestyle                  = 'iso, mdy'
