-reduce postgres checkpoint_warning because it triggers every time given the other settings -enable postgres standby mode on the replica

--- a/config/server/recovery.conf
+++ b/config/server/recovery.conf
@@ -2,6 +2,6 @@
 # PostgreSQL recovery configuration file
 # --------------------------------------
 
-standby_mode             = off
+standby_mode             = on
 restore_command          = '/usr/local/rvm/bin/aws_ruby /usr/share/postgresql-common/pg_restore %p %f'
 recovery_target_timeline = 'latest'
