--- a/config/server/recovery.conf
+++ b/config/server/recovery.conf
@@ -5,3 +5,4 @@
 standby_mode             = on
 restore_command          = '/usr/local/rvm/bin/aws_ruby /usr/share/postgresql-common/pg_restore %p %f'
 recovery_target_timeline = 'latest'
+trigger_file             = '/var/lib/postgresql/9.4/main/failover.trigger'
