--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -41,6 +41,8 @@ http {
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
 
+  resolver 8.8.8.8 8.8.4.4 ipv6=off;
+
   server {
     listen 80 default_server;
 
