--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -1,16 +1,16 @@
 user www-data;
 worker_processes 4;
-pid /var/run/nginx.pid;
+pid /run/nginx.pid;
 
 events {
-  worker_connections 1024;
+  worker_connections 768;
 }
 
 http {
   sendfile on;
   tcp_nopush on;
   tcp_nodelay on;
-  keepalive_timeout 30;
+  keepalive_timeout 30s;
   types_hash_max_size 2048;
   client_max_body_size 10M;
 
@@ -21,11 +21,13 @@ http {
   error_log /var/log/nginx/error.log;
 
   gzip on;
-  gzip_comp_level 2;
+  gzip_disable "msie6";
+  gzip_vary off;
   gzip_proxied any;
+  gzip_comp_level 6;
   gzip_buffers 16 8k;
-  gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  gzip_disable "MSIE [1-6].(?!.*SV1)";
+  gzip_http_version 1.1;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
   proxy_redirect off;
   proxy_set_header X-Real-IP $remote_addr;
