--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -37,6 +37,7 @@ http {
 
   ssl_certificate /etc/ssl/certs/passmaster.io.crt;
   ssl_certificate_key /etc/ssl/private/passmaster.io.key;
+  ssl_dhparam /etc/ssl/certs/dhparam.pem;
   ssl_session_cache shared:SSL:5m;
   ssl_session_timeout 10m;
   ssl_prefer_server_ciphers on;
