better nginx logging

--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -17,7 +17,8 @@ http {
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
 
-  access_log /var/log/nginx/access.log;
+  log_format concise '[$time_iso8601] $remote_addr $remote_user $server_name $status $request_method "$uri" "$server_protocol" $request_length $bytes_sent "$http_user_agent"';
+  access_log /var/log/nginx/access.log concise;
   error_log /var/log/nginx/error.log;
 
   gzip on;
@@ -48,18 +49,18 @@ http {
 
   server {
     listen 80 default_server;
+    access_log /var/log/nginx/spam.log concise;
 
     location / {
-      access_log /var/log/nginx/spam.log;
       return 410;
     }
   }
 
   server {
     listen 443 default_server ssl;
+    access_log /var/log/nginx/spam.log concise;
 
     location / {
-      access_log /var/log/nginx/spam.log;
       return 410;
     }
   }
