--- a/config/server/passmaster-start.conf
+++ b/config/server/passmaster-start.conf
@@ -1,6 +1,6 @@
 # passmaster-start - Upstart task for starting passmaster server
 
-description "Start passmaster server"
+description "Passmaster server startup"
 
 start on (net-device-up IFACE!=lo
           and local-filesystems
