--- a/config/server/passmaster-stop.conf
+++ b/config/server/passmaster-stop.conf
@@ -1,6 +1,6 @@
 # passmaster-stop - Upstart task for stopping passmaster server
 
-description "Stop passmaster server"
+description "Passmaster server shutdown"
 
 start on starting rc RUNLEVEL=[016]
 
