update PostgreSQL to 9.5

--- a/config/server/postgresql.conf
+++ b/config/server/postgresql.conf
@@ -6,10 +6,10 @@
 # FILE LOCATIONS
 #------------------------------------------------------------------------------
 
-data_directory    = '/var/lib/postgresql/9.4/main'
-hba_file          = '/etc/postgresql/9.4/main/pg_hba.conf'
-ident_file        = '/etc/postgresql/9.4/main/pg_ident.conf'
-external_pid_file = '/var/run/postgresql/9.4-main.pid'
+data_directory    = '/var/lib/postgresql/9.5/main'
+hba_file          = '/etc/postgresql/9.5/main/pg_hba.conf'
+ident_file        = '/etc/postgresql/9.5/main/pg_ident.conf'
+external_pid_file = '/var/run/postgresql/9.5-main.pid'
 
 #------------------------------------------------------------------------------
 # CONNECTIONS AND AUTHENTICATION
@@ -40,7 +40,7 @@ wal_level                    = hot_standby
 fsync                        = on
 synchronous_commit           = on
 wal_buffers                  = 16MB
-checkpoint_segments          = 4
+max_wal_size                 = 192MB
 checkpoint_timeout           = 15min
 checkpoint_completion_target = 0.2
 checkpoint_warning           = 3min
