add systemd service configs

--- a/config/server/remote-syslog.conf
+++ b/config/server/remote-syslog.conf
@@ -1,6 +1,6 @@
 # remote-syslog - Upstart task for starting remote_syslog service
 
-description "Monitor files and send to PaperTrail"
+description "PaperTrail log tailing service"
 
 start on (net-device-up IFACE!=lo
           and local-filesystems
