move to AWS with and ELD terminating HTTPS

--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -1,6 +1,7 @@
 user www-data;
 worker_processes 4;
 pid /run/nginx.pid;
+load_module modules/ngx_http_echo_module.so;
 
 events {
   worker_connections 768;
@@ -17,7 +18,7 @@ http {
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
 
-  log_format concise '[$time_iso8601] $remote_addr $remote_user $server_name $status $request_method "$uri" "$server_protocol" $request_length $bytes_sent "$http_user_agent"';
+  log_format concise '[$time_iso8601] $remote_addr $http_x_forwarded_for $remote_user $server_name $status $request_method "$uri" "$server_protocol" $request_length $bytes_sent "$http_user_agent"';
   access_log /var/log/nginx/access.log concise;
   error_log /var/log/nginx/error.log;
 
@@ -33,17 +34,7 @@ http {
   proxy_redirect off;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header Host $http_host;
-
-  ssl_certificate /etc/ssl/certs/passmaster.io.crt;
-  ssl_certificate_key /etc/ssl/private/passmaster.io.key;
-  ssl_dhparam /etc/ssl/certs/dhparam.pem;
-  ssl_session_cache shared:SSL:5m;
-  ssl_session_timeout 10m;
-  ssl_prefer_server_ciphers on;
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
 
   resolver 8.8.8.8 8.8.4.4 ipv6=off;
 
@@ -51,14 +42,11 @@ http {
     listen 80 default_server;
     access_log /var/log/nginx/spam.log concise;
 
-    location / {
-      return 410;
+    location /healthz {
+      access_log none;
+      default_type text/plain;
+      echo -n ok;
     }
-  }
-
-  server {
-    listen 443 default_server ssl;
-    access_log /var/log/nginx/spam.log concise;
 
     location / {
       return 410;
