update aws sdk to v3

--- a/config/env.yml
+++ b/config/env.yml
@@ -4,21 +4,21 @@
 # db_* and passmaster_host settings to suit your local environment.
 
 development:
-  db_username: postgres
+  db_username:
   db_password:
   db_database: passmaster
   db_host: 127.0.0.1
   db_port: 5432
 
 test:
-  db_username: postgres
+  db_username:
   db_password:
   db_database: passmaster_test
   db_host: 127.0.0.1
   db_port: 5432
 
 staging:
-  db_username: postgres
+  db_username:
   db_password:
   db_database: passmaster
   db_host: 127.0.0.1
@@ -33,3 +33,7 @@ production:
   secret_key_base:
 
 passmaster_host: 127.0.0.1:8000
+aws_access_key_id:
+aws_secret_access_key:
+aws_region:
+aws_assets_bucket:
