ignore ./sbin for bundler binstubs

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile ~/.gitignore_global
 
-# Bundler config
+# Bundler
 /.bundle
 /vendor/bundle
+/.sbin
 
 # Default SQLite database.
 /db/*.sqlite3
