--- a/config/server/puma.service
+++ b/config/server/puma.service
@@ -10,7 +10,7 @@ User=passmaster
 WorkingDirectory=/home/passmaster/passmaster
 # Environment=PUMA_DEBUG=1
 Environment=RAILS_ENV=production
-ExecStart=bundle exec puma
+ExecStart=/home/passmaster/passmaster/sbin/puma -C /home/passmaster/passmaster/config/puma.rb ../config.ru
 
 Restart=always
 
