--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -1,7 +1,6 @@
 user www-data;
 worker_processes 4;
 pid /run/nginx.pid;
-load_module modules/ngx_http_echo_module.so;
 
 events {
   worker_connections 768;
@@ -23,12 +22,8 @@ http {
   error_log /var/log/nginx/error.log;
 
   gzip on;
-  gzip_disable "msie6";
-  gzip_vary off;
   gzip_proxied any;
   gzip_comp_level 6;
-  gzip_buffers 16 8k;
-  gzip_http_version 1.1;
   gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
   proxy_redirect off;
@@ -45,7 +40,7 @@ http {
     location /healthz {
       access_log none;
       default_type text/plain;
-      echo -n ok;
+      return 200 'ok';
     }
 
     location / {
