--- a/config/env.yml
+++ b/config/env.yml
@@ -17,23 +17,5 @@ test:
   db_host: 127.0.0.1
   db_port: 5432
 
-staging:
-  db_username:
-  db_password:
-  db_database: passmaster
-  db_host: 127.0.0.1
-  db_port: 5432
-
-production:
-  db_username:
-  db_password:
-  db_database:
-  db_host:
-  db_port:
-  secret_key_base:
-
 passmaster_host: 127.0.0.1:8000
-aws_access_key_id:
-aws_secret_access_key:
-aws_region:
-aws_assets_bucket:
+aws_region: us-west-2
