update ruby to 3.3.5 and rails to 7.2.1

--- a/config/env.yml
+++ b/config/env.yml
@@ -7,15 +7,14 @@ development:
   db_username:
   db_password:
   db_database: passmaster
-  db_host: 127.0.0.1
+  db_host: localhost
   db_port: 5432
 
 test:
   db_username:
   db_password:
   db_database: passmaster_test
-  db_host: 127.0.0.1
+  db_host: localhost
   db_port: 5432
 
-passmaster_host: 127.0.0.1:8000
 aws_region: us-west-2
