remove env.rb initializer in favor of rails defaults

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,5 @@
 /public/assets
 /.sass-cache
 
-# Credentials
-/config/env.local.yml
+# Ignore master key for decrypting credentials and more.
 /config/master.key
