--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -7,6 +7,7 @@ events {
 }
 
 http {
+  http2 on;
   sendfile on;
   tcp_nopush on;
   tcp_nodelay on;
@@ -31,10 +32,8 @@ http {
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header Host $http_host;
 
-  resolver 8.8.8.8 8.8.4.4 ipv6=off;
-
   server {
-    listen 80 default_server;
+    listen [::]:80 default_server;
     access_log /var/log/nginx/spam.log concise;
 
     location /healthz {
