--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -32,6 +32,8 @@ http {
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header Host $http_host;
 
+  resolver [fd00:ec2::253];
+
   server {
     listen [::]:80 default_server;
     access_log /var/log/nginx/spam.log concise;
