--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -18,7 +18,7 @@ http {
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
 
-  log_format concise '[$time_iso8601] $remote_addr $http_x_forwarded_for $remote_user $server_name $status $request_method "$uri" "$server_protocol" $request_length $bytes_sent "$http_user_agent"';
+  log_format concise '[$time_iso8601] $status $request_method $server_name "$uri" "$server_protocol" $request_length $bytes_sent "$http_user_agent"';
   access_log /var/log/nginx/access.log concise;
   error_log /var/log/nginx/error.log;
 
@@ -28,8 +28,6 @@ http {
   gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
   proxy_redirect off;
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header Host $http_host;
 
   resolver [fd00:ec2::253];
