switch nginx back to http1.1 and ipv4 due to ALB constraints

--- a/config/server/nginx.conf
+++ b/config/server/nginx.conf
@@ -7,7 +7,7 @@ events {
 }
 
 http {
-  http2 on;
+  http2 off;
   sendfile on;
   tcp_nopush on;
   tcp_nodelay on;
@@ -30,10 +30,10 @@ http {
   proxy_redirect off;
   proxy_set_header Host $http_host;
 
-  resolver [fd00:ec2::253];
+  resolver 169.254.169.253;
 
   server {
-    listen [::]:80 default_server;
+    listen 80 default_server;
     access_log /var/log/nginx/spam.log concise;
 
     location /healthz {
